<resources>
    <string name="app_name">Task_3_Sign_In</string>
    <string name="home_text">Task 3 Sign in - Register</string>

    <!--for hint-->
    <string name="register_username_hint">Insert your email</string>
    <string name="register_password_hint">Insert your password</string>
    <string name="register_realname_hint">Instert your name</string>

    <!--for button-->
    <string name="login_button">Login</string>
    <string name="logout_button">Logout</string>
    <string name="register_button">Register</string>
    <string name="navigation_register_button">Register</string>
    <string name="navigation_signin_button">Sign in</string>
    <string name="navigation_home_button">Home</string>

    <!--for navigation menu-->
    <string name="nav_list_home">Home</string>
    <string name="nav_list_profile">Sign In</string>
    <string name="nav_list_contact">Register</string>

    <!--validation message-->
    <string name="empty_validation">Empty value not allowed</string>
    <string name="email_validation">Wrong email format</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
