<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="layout.RegisterFragment"
    android:background="#987654">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <EditText android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_username_hint"
            android:editable="true" />

        <EditText android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_password_hint"
            android:editable="true" />

        <EditText android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_realname_hint"
            android:editable="true" />

        <Button android:id="@+id/register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_button"/>

        <Button android:id="@+id/nav_home_button"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/navigation_home_button"/>
    </LinearLayout>

</FrameLayout>
