<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="layout.HomeFragment"
    android:background="#987654">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <TextView android:id="@+id/home_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/home_text"/>

        <Button android:id="@+id/navigation_register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/navigation_register_button"/>

        <Button android:id="@+id/navigation_signin_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/navigation_signin_button"/>

    </LinearLayout>
</FrameLayout>
